--- a/css/token.css
+++ b/css/token.css
@@ -3,8 +3,8 @@
     --bg: #EAEEEF;
     --bg-900:#9EB2B7;
  
-    --interactive: #FD6540;
-    --interactive-hover: #F9AD9A;
+    --interactive: #AFD1DE;
+    --interactive-hover: #7BB4CA;
   
     /*Primary */
     --blue-600: #AFD1DE;
