--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ code {
 
 .btn-secondary {
   display: inline-block;
-  padding: 0.8em 1.5em;
+  padding: 0.8em 3.5em;
   color: var(--neutral-00);
   background-color: var(--neutral-900);
   text-align: center;
@@ -257,7 +257,31 @@ select:invalid,select option[value=""] {
   display: none;
 }
 
-/** Combined Elements **/
+/* Styling for images */
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.img {
+  max-width: 100%;
+  border-radius: 0.5rem;
+  display: block;
+  object-fit: cover;
+}
+
+.img-product {
+  transition: transform 0.2s;
+}
+
+.img-product:hover {
+  transform: scale(1.02);
+  filter: brightness(85%);
+}
+
+
+/* Combined Elements */
 .payment-form-section {
   margin-top: 0rem;
   margin-bottom: 0rem;
