--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,7 @@ code {
 .btn-secondary:hover, .btn-primary:focus {
   background-color: var(--neutral-700);
   border: none;
+  font-weight: bold;
 }
 
 
@@ -262,6 +263,7 @@ select:invalid,select option[value=""] {
 .image-container img {
   width: 100%;
   height: 100%;
+  align-items: center;
 }
 
 .img {
@@ -282,6 +284,44 @@ select:invalid,select option[value=""] {
 
 
 /* Combined Elements */
+/* Product Page */
+.product-flex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 6rem;
+}
+
+.product-listing{
+ background-color: var(--bg);
+}
+
+.product-container {
+  display: flex;
+  flex-direction: column;
+  border-color: var(--neutral-00);
+}
+
+.product-name {
+  margin-bottom: 0.25rem;
+  color: var(--neutral-900)
+}
+
+.product-color {
+  font-size: 1.05rem;
+  font-weight: 400;
+  margin-top: 0rem;
+  margin-bottom: 0.8rem;
+}
+
+.product-price {
+  font-weight: 600;
+  color: var(--neutral-900);
+  margin-bottom: 1rem;
+}
+
+/* Payment Form */
+
 .payment-form-section {
   margin-top: 0rem;
   margin-bottom: 0rem;
