--- a/css/main.css
+++ b/css/main.css
@@ -268,13 +268,17 @@ select:invalid,select option[value=""] {
 
 .image-container-colors {
   margin-top:.5rem;
-  margin-bottom:.5rem;
+  margin-bottom:1rem;
 } 
 
 .image-container-colors img {
   width: 40%;
   height: 100%;
 } 
+
+.img-container-colors img:hover {
+
+}
 
 .img {
   max-width: 100%;
