--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,89 @@ section {
   margin-bottom: 2rem;
 }
 
+/*
+  HEADER -------------------
+
+*/
+
+.logo {
+  height: 1.5rem;
+  width: auto;
+}
+
+.nav-bar {
+  background-color: var(--neutral-00);
+  padding: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-bar-container {
+  border: 1px solid var(--neutral-300);
+}
+
+.nav-flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  justify-items: center;
+  align-content: center;
+  align-items: center;
+}
+
+.nav-item {
+  color: var(--neutral-700);
+  font-size: 0.8rem;
+  padding: 1rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  margin: 0rem;
+  display: inline-block;
+  text-decoration: none;
+  transition: color 0.5s;
+}
+
+.nav-item:hover, .nav-item:focus {
+  color: var(--blue-900);
+}
+
+.nav-secondary {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.title-banner {
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  padding: 8rem 6rem;
+  padding-top: 12rem;
+  background-color: var(--bg);
+  color: var(--neutral-50);
+}
+
+.toc-container {
+  background-color: var(--bg);
+  padding: 3rem;
+  padding-right: 10rem;
+  width: fit-content;
+}
+
+.toc-element {
+  padding: 0rem 6rem;
+  margin-top: 4rem;
+}
+
+.toc-element h3 {
+  color: var(--neutral-700);
+  font-size: 1.65rem;
+  margin-top: 0rem;
+}
+
 /* 
   BRANDING GUIDELINES -------------------
 */
@@ -57,24 +140,25 @@ header {
   z-index: 1000;
   border-bottom-width: 0.05rem;
   border-bottom-style: solid;
-  border-bottom-color: var(--purple-400);
+  border-bottom-color: var(--bg-900);
 }
 
 h1{
   font-family: "GT Super Ds Trial", serif;
   font-size: 2.5rem;
   margin-top: 0rem;
+  color: var(--neutral-900);
 }
 
 h2 {
-  color: var(--purple-400);
+  color: var(--bg-1000);
   font-family: "GT Super Ds Trial", serif;
   margin-top: 4rem;
   font-size: 2.0rem;
 }
 
 h3 {
-  color: var(--purple-600);
+  color: var(--bg-900);
   font-family: "GT Super Ds Trial", serif;
   margin-top: 2rem;
   font-size: 1.65rem;
@@ -174,14 +258,14 @@ p {
 /* Styling for the in-text links */
 
 .in-text-link {
-  color: var(--bg-900);
+  color: var(--bg-1000);
   transition: color 0.25s ease-out;
-  font-weight: bold;
+  font-weight: 500;
   letter-spacing: 0.025rem;
 }
 
 .in-text-link:hover, .in-text-link:focus {
-  color: var(--bg-1000);
+  color: var(--bg-900);
 }
 
 /* Styling for form elements */
@@ -360,8 +444,20 @@ select:invalid,select option[value=""] {
   filter: brightness(85%);
 }
 
+/* 
+  TEXT ELEMENTS -------------------
+*/
 
-/* Combined Elements */
+.text-styling {
+  color: var(--neutral-700);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+/* 
+  COMBINED ELEMENTS -------------------
+*/
+
 /* Product Page */
 .product-flex {
   display: flex;
