--- a/css/grid.css
+++ b/css/grid.css
@@ -12,6 +12,23 @@ display: grid;
   display: grid; 
   grid-gap: 4rem;
 }
+
+.checkout-cart {
+  display: grid; 
+}
+
+.cart-info-grid {
+  display: grid;
+}
+
+.checkout-header {
+  display: grid;
+}
+
+.checkout-total {
+  display: grid;
+}
+
 @media (min-width: 0rem) {
   .grid {
     grid-template-columns: 1fr;
@@ -28,14 +45,98 @@ display: grid;
   .payment-form-grid {
     grid-template-columns: 1fr;
   }
+
+  .checkout-cart {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 2rem;
+  }
+
+  .cart-info-grid {
+    grid-template-columns: 1fr;
+    row-gap: 1rem;
+  }
+
+  .checkout-header {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .checkout-total {
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    border-top: 0.05rem solid var(--bg-900);
+    margin: 1rem 0rem;
+    width: 100%;
+    row-gap: 1rem;
+    padding: 2rem 0rem;
+  }
+
+  .checkout-page {
+    margin-bottom: 0rem;
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
 
 @media (min-width: 20rem) {
   .product-listing {
     grid-template-columns: 1fr;
   }
+
   .imagery-listing {
     grid-template-columns: 1fr;
+  }
+
+  .checkout-cart {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 2rem;
+  }
+
+  .cart-info-grid {
+    grid-template-columns: 1fr;
+    row-gap: 1rem;
+  }
+
+  .checkout-header {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .checkout-total {
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    border-top: 0.05rem solid var(--bg-900);
+    margin: 1rem 0rem;
+    width: 100%;
+    row-gap: 1rem;
+    padding: 2rem 0rem;
+  }
+}
+
+@media (min-width: 40rem) {
+  .checkout-cart {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 2rem;
+  }
+
+  .cart-info-grid {
+    grid-template-columns: 1fr;
+    row-gap: 1rem;
+  }
+
+  .checkout-header {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .checkout-total {
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    border-top: 0.05rem solid var(--bg-900);
+    margin: 1rem 0rem;
+    width: 100%;
+    row-gap: 1rem;
+    padding: 2rem 0rem;
   }
 }
 
@@ -43,8 +144,63 @@ display: grid;
   .product-listing {
     grid-template-columns: 1fr 1fr;
   }
+
+  .checkout-cart {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 2rem;
+  }
+
+  .checkout-header {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .checkout-total {
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    border-top: 0.05rem solid var(--bg-900);
+    margin: 1rem 0rem;
+    width: 100%;
+    row-gap: 1rem;
+    padding: 2rem 0rem;
+  }
 }
 
+@media (min-width: 55rem) {
+  .checkout-cart {
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 2rem;
+  }
+
+  .cart-info-grid {
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1rem;
+  }
+
+  
+  .checkout-header {
+    grid-template-columns: 2fr 1fr 1fr;
+  }
+
+  .checkout-total {
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    border-top: 0.05rem solid var(--bg-900);
+    margin: 1rem 0rem;
+    width: 100%;
+    row-gap: 1rem;
+    padding: 2rem 0rem;
+  }
+}
+
+@media (min-width: 60rem) {
+  .checkout-page {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 0rem;
+  }
+}
 
 @media (min-width: 72rem) {
   .product-listing {
@@ -53,6 +209,58 @@ display: grid;
 
   .imagery-listing {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .checkout-cart {
+    grid-template-columns: 3fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 2rem;
+  }
+
+  .cart-info-grid {
+    grid-template-columns: 1fr 2fr;
+    column-gap: 1rem;
+  }
+
+  .checkout-header {
+    grid-template-columns: 3fr 1fr 1fr;
+  }
+
+  .checkout-total {
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    border-top: 0.05rem solid var(--bg-900);
+    margin: 1rem 0rem;
+    width: 100%;
+    row-gap: 1rem;
+    padding: 2rem 0rem;
+  }
+}
+
+@media (min-width: 100rem) {
+  .checkout-cart {
+    grid-template-columns: 4fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 2rem;
+  }
+
+  .cart-info-grid {
+    grid-template-columns: 1fr 3fr;
+    column-gap: 1rem;
+  }
+
+  .checkout-header {
+    grid-template-columns: 4fr 1fr 1fr;
+  }
+
+  .checkout-total {
+    grid-template-columns: 5fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    border-top: 0.05rem solid var(--bg-900);
+    margin: 1rem 0rem;
+    width: 100%;
+    row-gap: 1rem;
+    padding: 2rem 0rem;
   }
 }
 
