--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ code {
   background-color: var(--bg);
   padding: 1rem;
   display: block;
-  color: var(--neutral-900);
+  color: var(--bg-1000);
   font-size: 1rem;
 }
 
@@ -168,6 +168,7 @@ h4 {
   font-family: "GT Super Ds Trial", serif;
   margin-bottom: 1rem;
   font-size: 1.3rem;
+  font-weight: 500;
 }
 
 h5 {
@@ -284,8 +285,7 @@ label {
 
 input {
   padding: 0.25rem;
-  border: 0.1rem solid var(--blue-900);
-  border-color: var(--blue-600);
+  border: 1px solid var(--bg);
   transition: border-color 0.5s;
   margin-bottom: 0.5rem;
   max-width:20rem;
@@ -379,9 +379,9 @@ input[type="radio"]:hover {
 
 select {
   padding: 0.25rem;
-  border: 0.1rem solid var(--blue-900);
-  border-radius: 0.35rem;
-  border-color: var(--blue-600);
+  border: 1px solid var(--bg);
+  border-radius: 0rem;
+  color: var(--neutral-700);
   transition: border-color 0.5s;
   margin-bottom: 0.5rem;
   max-width:20rem;
@@ -430,9 +430,9 @@ select:invalid,select option[value=""] {
 
 .img {
   max-width: 100%;
-  border-radius: 0.5rem;
   display: block;
   object-fit: cover;
+  background-color: var(--bg);
 }
 
 .img-product {
@@ -452,6 +452,10 @@ select:invalid,select option[value=""] {
   color: var(--neutral-700);
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.header-styling h4 {
+  font-weight: bold;
 }
 
 /* 
@@ -513,4 +517,254 @@ select:invalid,select option[value=""] {
 .payment-method-container {
   margin-top: 0rem;
   margin-bottom: 2rem;
+}
+
+/* Checkout Cart */
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 1rem;
+  min-height: 3rem;
+}
+
+th {
+  text-align: left;
+  padding: 0.5rem 1rem;
+  color:var(--neutral-900);
+  background: var(--bg);
+  font-weight: bold;
+}
+
+.th-product{
+  border-bottom-left-radius: 0rem;
+  border-top-left-radius: 0rem;
+}
+
+.th-product:last-child{
+  text-align: left;
+}
+
+.th-subtotal{
+  border-bottom-right-radius: 0rem;
+  border-top-right-radius: 0rem;
+}
+
+th:last-child {
+  text-align: right;
+}
+
+
+.cart {
+  margin: 1rem auto;
+}
+
+.cart-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  margin-right: 2rem;
+  gap: 2rem;
+}
+
+.cart-product-name {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+}
+
+.mini-product-name {
+  font-size:1.25rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.mini-product-shade {
+  font-size:1rem;
+}
+
+small {
+  font-weight: 500;
+  margin-top: 1rem;
+}
+
+.remove-link {
+  margin-top: 2rem;
+}
+
+.quantity-box {
+  max-width: 3rem;
+  max-height: 2rem;
+  display: flex;
+  justify-self: flex-end;
+}
+
+
+.total-container {
+  border-top: 0.05rem solid var(--bg-900);
+  margin: 3rem 0rem;
+  width: 100%;
+  padding: 2rem 0rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.total-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.cart-price {
+  display: flex;
+  justify-content: start;
+  height: fit-content;
+}
+
+.total-price {
+  display: flex;
+  justify-content: flex-end;
+  height: fit-content;
+}
+
+.final-price {
+  font-weight: bold;
+}
+
+.checkout-button {
+  justify-self: end;
+  min-width: 12rem;
+}
+
+/* 
+  DESIGN ELEMENTS -------------------
+*/
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.img {
+  max-width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+/* Stack Overflow. n.d. Remove white space below image. Retrieved from https://stackoverflow.com/questions/7774814/remove-white-space-below-image */
+
+.img-product {
+  transition: transform 0.2s;
+}
+
+.img-product:hover {
+  transform: scale(1.02);
+}
+
+.img-cart {
+  max-width: 12rem;
+  max-height: auto;
+  display: block;
+  object-fit: cover;
+}
+
+.font-gt-super-ds {
+  font-family: "GT Super Ds Trial", serif;
+  font-size:1.25rem;
+  margin-bottom: 0rem;
+  color: var(--bg-1000);
+}
+
+.font-suisse {
+  font-family: 'Suisse Intl Trial', sans-serif;
+  font-size:1.25rem;
+  margin-bottom: 0rem;
+  color: var(--bg-1000);
+}
+
+.color-container {
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.color-box {
+  border: solid var(--bg) 1px;
+  display: flex;
+  height: 10rem;
+  width: 10rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  border-radius: 50%;
+}
+
+span {
+  color: var(--neutral-00);
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.reversed span {
+  color: var(--neutral-700);
+}
+
+/* 
+  FOOTER -------------------
+*/
+
+.footer-container {
+  background-color: var(--bg);
+  padding: 6rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.footer-box {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.footer-logo {
+  height: 3rem;
+  width: auto;
+  margin-right: 6rem;
+  margin-bottom: 4.5rem;
+}
+
+.footer-nav-container {
+  display: flex;
+  flex-direction: row;
+  gap: 10rem;
+  row-gap: 3rem;
+  flex-wrap: wrap;
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.footer-title {
+  color: var(--bg-1000);
+  margin-top: 0rem;
+  margin-bottom: 1rem;
+  font-family: 'GT Super Ds Trial', sans-serif;
+}
+
+.footer-link {
+  color: var(--bg-900);
+  text-decoration: none;
+  transition: color 0.25s ease-out;
+}
+
+.footer-link:hover, .footer-link:focus {
+  color: var(--pink-600);
 }
