--- a/css/main.css
+++ b/css/main.css
@@ -768,3 +768,14 @@ span {
 .footer-link:hover, .footer-link:focus {
   color: var(--pink-600);
 }
+
+
+/* 
+  CART PAGE ELEMENTS -------------------
+*/
+
+.cart-page {
+  margin-top: 10rem;
+  margin-bottom: 6rem;
+  padding-bottom: 0.25rem;
+}
