Finalized Product Page + Input Section

--- a/css/token.css
+++ b/css/token.css
@@ -17,6 +17,7 @@
 
     --neutral-00: #FFFFFF;
     --neutral-300: #D8D8D8;
+    --neutral-500: #6A6A6A;
     --neutral-700: #404040;
     --neutral-900: #202020;
   }
