--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,8 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000;
-  border-bottom-width: 0.05rem;
+  z-index: 100;
+  border-bottom-width: 0.5px;
   border-bottom-style: solid;
   border-bottom-color: var(--bg);
 }
@@ -138,9 +138,9 @@ header {
   top: 0;
   width: 100%;
   z-index: 1000;
-  border-bottom-width: 0.05rem;
+  border-bottom-width: 0.5px;
   border-bottom-style: solid;
-  border-bottom-color: var(--bg-900);
+  border-bottom-color: var(--neutral-300);
 }
 
 h1{
@@ -195,7 +195,7 @@ p {
 
 .btn {
   width: fit-content;
-  border-radius: 0;
+  border-radius: 0.5rem;
 }
 
 .btn-default {
@@ -275,7 +275,7 @@ form {
   display: flex;
   flex-direction: column;
   width: 20em;
-  max-width: 90%;
+  max-width: 100%;
 }
 
 label {
@@ -284,13 +284,16 @@ label {
 }
 
 input {
-  padding: 0.25rem;
-  border: 1px solid var(--blue-900);
+  padding: 0.75rem 0.5rem;
+  border: 1px solid var(--neutral-300);
   transition: border-color 0.5s;
   margin-bottom: 0.5rem;
   max-width:20rem;
   width:100%;
   display: block;
+  border-radius: 0.25rem;
+  font-size: 0.75rem;
+  color: var(--neutral-500);
 }
 
 input:hover {
@@ -299,18 +302,35 @@ input:hover {
 
 input:focus {
   border-color: var(--pink-600); /* Change the border color on focus */
-  border-width: 0.25rem;
+  border-width: 1px;
+  color: var(--neutral-900);
 }
 
 input:focus-visible,textarea:focus-visible {
-  border: 0.1rem solid var(--pink-600);
-  outline: 0.05rem solid var(--pink-600);
+  border: 1px solid var(--pink-600);
+  outline: 0.5px solid var(--pink-600);
+}
+
+.other-input {
+  padding: 0.25rem 0.5rem;
 }
 
 .input-container {
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
+}
+
+.input-two-column {
+  display: grid; 
+  gap: 1.55rem;
+  grid-template-columns: 1fr 1fr;
+}
+
+.input-three-column {
+  display: grid; 
+  gap: 1.55rem;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .radio-container {
@@ -363,7 +383,7 @@ input:focus-visible,textarea:focus-visible {
 
 input[type="radio"]:hover {
   border-color: var(--pink-600);
-  border-width: 0.15rem;
+  border-width: 1px;
 }
 
 .checkbox-group {
@@ -376,16 +396,20 @@ input[type="radio"]:hover {
 }
 
 select {
-  padding: 0.25rem;
-  border: 1px solid var(--blue-900);
-  border-radius: 0rem;
-  color: var(--neutral-700);
+  padding: 0.75rem 0.5rem;
+  border: 1px solid var(--neutral-300);
+  border-radius: 0.25rem;
   transition: border-color 0.5s;
   margin-bottom: 0.5rem;
   max-width:20rem;
   width:100%;
   display: block;
   box-sizing:content-box;
+  font-size: 0.75rem;
+  color: var(--neutral-500);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 select:hover {
@@ -394,7 +418,8 @@ select:hover {
 
 select:focus {
   border-color: var(--pink-600);
-  border-width: 0.15rem;
+  border-width: 1px;
+  color: var(--neutral-900);
 }
 
 select:invalid,select option[value=""] {
@@ -419,6 +444,7 @@ select:invalid,select option[value=""] {
   display: block;
   object-fit: cover;
   background-color: var(--bg);
+  border-radius: 0.5rem;
 }
 
 .img-product {
@@ -531,14 +557,11 @@ select:invalid,select option[value=""] {
   margin-top: 0rem;
   margin-bottom: 0rem;
 }
-.payment-form-section {
-  margin-top: 0rem;
-  margin-bottom: 0rem;
-}
 
 .payment-form-heading {
   color: var(--bg-900);
 /*  font-family: GT Serif  ;*/
+  margin-top: 0.5rem;
 }
 
 .payment-method-container {
@@ -564,8 +587,8 @@ th {
 }
 
 .th-product{
-  border-bottom-left-radius: 0rem;
-  border-top-left-radius: 0rem;
+  border-bottom-left-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
 }
 
 .th-product:last-child{
@@ -573,8 +596,8 @@ th {
 }
 
 .th-subtotal{
-  border-bottom-right-radius: 0rem;
-  border-top-right-radius: 0rem;
+  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 
 th:last-child {
@@ -628,7 +651,7 @@ small {
 
 
 .total-container {
-  border-top: 0.05rem solid var(--bg-900);
+  border-top: 0.5px solid var(--neutral-300);
   margin: 3rem 0rem;
   width: 100%;
   padding: 2rem 0rem;
@@ -657,6 +680,7 @@ small {
 
 .final-price {
   font-weight: bold;
+  font-size: 1.25rem;
 }
 
 .checkout-button {
@@ -687,13 +711,6 @@ small {
 
 .img-product:hover {
   transform: scale(1.02);
-}
-
-.img-cart {
-  max-width: 12rem;
-  height: auto;
-  display: block;
-  object-fit: cover;
 }
 
 .font-gt-super-ds {
@@ -805,4 +822,70 @@ span {
   margin-top: 10rem;
   margin-bottom: 6rem;
   padding-bottom: 0.25rem;
+}
+
+/* 
+  PAYMENT PAGE ELEMENTS -------------------
+*/
+
+.order-container {
+  display: flex;
+  justify-content: space-between;
+  justify-items: start;
+}
+
+.order-summary {
+  position: sticky;
+  border-left: 0.5px solid var(--neutral-300);
+  padding-bottom: 6rem;
+  margin-bottom: 0rem;
+  padding-top: 6rem;
+}
+
+.order-list {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding-top: 2rem;
+}
+
+.cart-title {
+  display: flex;
+  justify-content: start;
+  color: var(--neutral-900);
+  margin: 0rem;
+  padding: 1rem 0rem;
+}
+
+.img-checkout {
+  max-width: 4rem;
+  height: auto;
+  display: block;
+  object-fit: cover;
+  background-color: var(--bg);
+  border: solid 0.5px var(--neutral-300);
+  border-radius: 0.5rem;
+}
+
+.checkout-product-name {
+  font-size:1rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.checkout-product-shade {
+  font-size:0.75rem;
+}
+
+.checkout-qty {
+  font-size: 0.75rem;
+  margin-top: 1rem;
+}
+
+.checkout-price {
+  font-size: 0.9rem;
+}
+
+.check-label {
+  font-size: 0.75rem;
 }
