--- a/css/main.css
+++ b/css/main.css
@@ -455,7 +455,7 @@ select:invalid,select option[value=""] {
 }
 
 .img-product:hover {
-  transform: scale(1.05);
+  transform: scale(1.5);
 }
 
 /* 
@@ -888,4 +888,20 @@ span {
 
 .check-label {
   font-size: 0.75rem;
+}
+
+/* 
+  SHOP PAGE ELEMENTS -------------------
+*/
+
+.shop-title {
+  display: flex;
+  justify-content: center;
+  color: var(--bg-900);
+  margin-top: 10rem;
+}
+
+.shop-section {
+  margin: 6rem 0rem;
+  padding: 0rem;
 }
