--- a/css/main.css
+++ b/css/main.css
@@ -776,3 +776,54 @@ span {
   margin-bottom: 6rem;
   padding-bottom: 0.25rem;
 }
+
+/* CONTACT PAGE ELEMENTS ---------------
+*/
+
+.Customer-Support-Feedback{
+  margin-top: 10rem;
+  margin-bottom: 6rem;
+  margin-left: auto;
+  margin-right: auto;
+  width:45%;
+  padding-bottom: 0.25rem;
+}
+
+
+.Customer-Support-Feedback h2{
+  text-align: center;
+}
+
+.Customer-Support-Feedback input{
+  max-width: 40rem;
+}
+
+textarea {
+  font-family: 'Suisse Intl Trial', sans-serif;
+  color: var(--neutral-700);
+  margin: 0rem;
+  padding: 0.25rem;
+  border: 1px solid var(--blue-900);
+  transition: border-color 0.5s;
+  margin-bottom: 0.5rem;
+  width:auto;
+  max-width:40rem;
+  width:100%;
+  height: 20rem;
+  display: block;
+}
+
+textarea:hover {
+  border-color: var(--pink-600); /* Change the border color on focus */
+}
+
+textarea:focus {
+  border-color: var(--pink-600); /* Change the border color on focus */
+  border-width: 0.25rem;
+}
+
+textarea:focus-visible,textarea:focus-visible {
+  border: 0.1rem solid var(--pink-600);
+  outline: 0.05rem solid var(--pink-600);
+}
+
