--- a/css/main.css
+++ b/css/main.css
@@ -780,12 +780,38 @@ span {
 /* CONTACT PAGE ELEMENTS ---------------
 */
 
+.service-hours {
+  display: flex;
+}
+
+#hours{
+  margin-right: 3rem;
+}
+
+.contact-information {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+
+.contact-information img{
+  margin-right:2rem;
+}
+
+.Google-Maps{
+  margin-top: 7rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .Customer-Support-Feedback{
-  margin-top: 10rem;
+  margin-top: 2rem;
   margin-bottom: 6rem;
   margin-left: auto;
   margin-right: auto;
-  width:45%;
+  width:50%;
   padding-bottom: 0.25rem;
 }
 
@@ -825,5 +851,10 @@ textarea:focus {
 textarea:focus-visible,textarea:focus-visible {
   border: 0.1rem solid var(--pink-600);
   outline: 0.05rem solid var(--pink-600);
+}
+
+.support-button {
+  justify-self: end;
+  min-width: 12rem;
 }
 
