--- a/css/main.css
+++ b/css/main.css
@@ -905,3 +905,84 @@ span {
   margin: 6rem 0rem;
   padding: 0rem;
 }
+
+/* CONTACT PAGE ELEMENTS ---------------
+*/
+
+.service-hours {
+  display: flex;
+}
+
+#hours{
+  margin-right: 3rem;
+}
+
+.contact-information {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+
+.contact-information img{
+  margin-right:2rem;
+}
+
+.Google-Maps{
+  margin-top: 7rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.Customer-Support-Feedback{
+  margin-top: 2rem;
+  margin-bottom: 6rem;
+  margin-left: auto;
+  margin-right: auto;
+  width:50%;
+  padding-bottom: 0.25rem;
+}
+
+
+.Customer-Support-Feedback h2{
+  text-align: center;
+}
+
+.Customer-Support-Feedback input{
+  max-width: 40rem;
+}
+
+textarea {
+  font-family: 'Suisse Intl Trial', sans-serif;
+  color: var(--neutral-700);
+  margin: 0rem;
+  padding: 0.25rem;
+  border: 1px solid var(--blue-900);
+  transition: border-color 0.5s;
+  margin-bottom: 0.5rem;
+  width:auto;
+  max-width:40rem;
+  width:100%;
+  height: 20rem;
+  display: block;
+}
+
+textarea:hover {
+  border-color: var(--pink-600); /* Change the border color on focus */
+}
+
+textarea:focus {
+  border-color: var(--pink-600); /* Change the border color on focus */
+  border-width: 0.25rem;
+}
+
+textarea:focus-visible,textarea:focus-visible {
+  border: 0.1rem solid var(--pink-600);
+  outline: 0.05rem solid var(--pink-600);
+}
+
+.support-button {
+  justify-self: end;
+  min-width: 12rem;
+}
