--- a/css/grid.css
+++ b/css/grid.css
@@ -31,9 +31,23 @@ display: grid;
   margin: 0rem;
   display: grid;
 }
+
 .support-page{
   display: grid;
 }
+
+.product-information{
+  display: grid;
+}
+
+.item-add{
+  display: grid;
+}
+
+.product-reccomendations{
+  display: grid;
+}
+
 @media (min-width: 0rem) {
   .grid {
     grid-template-columns: 1fr;
@@ -92,6 +106,14 @@ display: grid;
   .support-page{
     grid-template-columns: 1fr;
   }
+
+  .product-information{
+    grid-template-columns: 1fr;
+  }
+
+  .product-reccomendations{
+    grid-template-columns: 1fr;
+  }
 }
 
 @media (min-width: 20rem) {
@@ -127,6 +149,7 @@ display: grid;
     row-gap: 1rem;
     padding: 2rem 0rem;
   }
+
 }
 
 @media (min-width: 34rem) {
@@ -134,6 +157,13 @@ display: grid;
     padding-bottom: 0rem;
     margin-bottom: 0rem;
     padding-top: 9rem;
+  }
+   .product-reccomendations{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .product-information{
+    grid-template-columns: 1fr 1fr;
   }
 }
 
@@ -162,6 +192,10 @@ display: grid;
     row-gap: 1rem;
     padding: 2rem 0rem;
   }
+
+  .item-add{
+    grid-template-columns: 1fr 3fr;
+  }
 }
 
 @media (min-width: 45.5rem) {
@@ -169,6 +203,10 @@ display: grid;
     padding-bottom: 0rem;
     margin-bottom: 0rem;
     padding-top: 6rem;
+  }
+
+  .product-reccomendations{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
 
@@ -242,6 +280,10 @@ display: grid;
     margin-bottom: 4rem;
     padding-top: 6rem;
   }
+
+  .product-reccomendations{
+    grid-template-columns: 1fr 1fr 1fr 2fr;
+  }
 }
 
 @media (min-width: 72rem) {
@@ -276,6 +318,10 @@ display: grid;
     width: 100%;
     row-gap: 1rem;
     padding: 2rem 0rem;
+  }
+
+   .product-reccomendations{
+    grid-template-columns: 1fr 1fr 1fr 3fr;
   }
 }
 
