--- a/css/main.css
+++ b/css/main.css
@@ -1077,6 +1077,11 @@ textarea:focus-visible,textarea:focus-visible {
   font-size: 1rem;
   margin-top: 0.5rem;
 }
+
+.product-review{
+  border: 1px solid var(--neutral-300);
+}
+
 .related-items h3{
   font-size: 1.5rem;
   color: var(--neutral900);
