--- a/css/main.css
+++ b/css/main.css
@@ -1180,16 +1180,35 @@ textarea:focus-visible,textarea:focus-visible {
   align-items: center;
 }
 
-.about-content{
-  margin-right: 6.5rem;
-  margin-left: 6.5rem;
+.about-content-text{
+  margin-left: 10rem;
+  margin-right: 3rem;
 }
 
-.about-content p{
+.about-content-text h2{
+  font-size: 3rem;
+}
+
+.about-founder-quote{
+  margin-left: 3rem;
+  margin-right: 7rem;
+  text-align: center;
+}
+
+.about-founder-quote h3{
+  color: var(--neutral-700);
+}
+
+.about-founder-quote h5{
+  font-weight: 100;
+  color: var(--bg-1000);
+} 
+
+.about-content-text p{
   margin-bottom: 1rem;
 }
 
-.about-content h3, h5{
+.about-content-text h3, h5{
   text-align: center;
 }
 
@@ -1211,6 +1230,64 @@ textarea:focus-visible,textarea:focus-visible {
   max-width: 35rem;
 }
 
+/* EVENTS PAGE  ----------------------
+*/
+
+.join-us-img-container {
+  display: flex;
+  flex-direction: row;
+  gap: 5rem;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.join-us-text{
+  margin: 7rem 0 5rem 0;
+  text-align: center;
+}
+
+.join-us-reasoning{
+  max-width: 15rem;
+}
+
+.past-events{
+ margin: 0 5rem 7rem 5rem;
+}
+
+.all-past-events{
+  display: flex;
+  flex-direction: row;
+  gap: 5rem;
+  flex-wrap: wrap;
+}
+
+.list-of-events{
+  max-width: 25rem;
+}
+
+.list-of-events img{
+  max-width: 19rem;
+}
+
+.list-of-events p{
+  max-width: 19rem;
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.list-of-events h4{
+  font-size: 0.8rem;
+  margin: 0.5rem 0;
+}
+
+.list-of-events h3{
+  font-size: 1.5rem;
+  margin: 0.8rem 0;
+}
+
+
 /* LANDING PAGE  ----------------------
 */
 
@@ -1223,7 +1300,7 @@ figure {
 
 .banner-img {
   align-items: right;
-  width: 100vw;
+  max-width: 100%;
   height: auto;
 }
 
@@ -1347,7 +1424,7 @@ figure {
 @media (min-width: 0rem) {
   .event-img {
     align-items: right;
-    width: 100vw;
+    max-width: 100%;
     height: 50rem;
     object-fit: cover;
     object-position: center;
@@ -1355,6 +1432,7 @@ figure {
     margin: 0;
     display: block;
   } 
+
   .event-container {
     position: absolute;
     top: 50%;
@@ -1362,12 +1440,20 @@ figure {
     transform: translate(-50%, -50%);
     text-align: center;
   }
+
   .event-title {
     font-size: 3rem;
     max-width: 32rem;
     margin: 0 0 2rem 0;
     color: var(--bg);
-  }  
+  } 
+
+  .event-container h4{
+    font-size: 1.1rem;
+    margin: 6rem 0 0rem 0;
+    color: var(--neutral-00);
+  }
+
   .event-content {
     margin: 0 0 2rem 0;
     max-width: 32rem;
@@ -1387,6 +1473,7 @@ figure {
     object-fit: cover;
     display: block;
   }  
+
   .event-container {
     position:absolute;
     top: 50%;
