--- a/css/main.css
+++ b/css/main.css
@@ -278,7 +278,6 @@ p {
 form {
   display: flex;
   flex-direction: column;
-  width: 20em;
   max-width: 100%;
 }
 
@@ -846,6 +845,7 @@ span {
 .footer-newsletter {
   display: flex;
   flex-direction: column;
+  width: auto;
 }
 
 .footer-btn {
