--- a/css/main.css
+++ b/css/main.css
@@ -250,7 +250,7 @@ p {
 }
 
 .btn-secondary:hover, .btn-secondary:focus {
-  background-color: var(--neutral-700);
+  background-color: var(--neutral-500);
   border: none;
 }
 
@@ -460,7 +460,7 @@ select:invalid,select option[value=""] {
 }
 
 .img-product:hover {
-  transform: scale(1.5);
+  transform: scale(1.8);
 }
 
 /* 
@@ -738,7 +738,7 @@ small {
 }
 
 .img-product:hover {
-  transform: scale(1.02);
+  transform: scale(1.08);
 }
 
 .font-gt-super-ds {
@@ -1085,7 +1085,6 @@ textarea:focus-visible,textarea:focus-visible {
 }
 
 .item-add input{
-  max-width: auto;
   align-items: center;
   margin-right: 2rem;
 }
@@ -1097,7 +1096,6 @@ textarea:focus-visible,textarea:focus-visible {
   gap: 0.5rem;
   margin-top:0.5rem;
   margin-bottom: 0.5rem;
-  background-color: none;
 }
 
 .product-reccs{
@@ -1252,10 +1250,6 @@ textarea:focus-visible,textarea:focus-visible {
   max-width: 35rem;
 }
 
-.about-images-product {
-  display: block;
-}
-
 /* EVENTS PAGE  ----------------------
 */
 
@@ -1331,7 +1325,7 @@ figure {
 }
 
 .banner-img {
-  align-items: right;
+  align-items: end;
   max-width: 100%;
   height: auto;
 }
@@ -1455,7 +1449,7 @@ figure {
 
 @media (min-width: 0rem) {
   .event-img {
-    align-items: right;
+    align-items: end;
     max-width: 100%;
     height: 50rem;
     object-fit: cover;
@@ -1497,7 +1491,7 @@ figure {
 
 @media (min-width: 68rem) {
   .event-img {
-    align-items: right;
+    align-items: end;
     width: 100vw;
     height: auto;
     padding: 0;
