Added Thank You Page
Added thank you page + citations
Fixed Checkout Page submission button formaction

--- a/css/main.css
+++ b/css/main.css
@@ -946,9 +946,9 @@ span {
   font-size: 0.75rem;
 }
 
-.element-secondary {
+.order-container {
   border-left: var(--bg) solid 1px;
-  margin: 0rem;
+  margin-bottom: 0rem;
 }
 
 /* 
