--- a/css/grid.css
+++ b/css/grid.css
@@ -75,7 +75,8 @@ display: grid;
   }
 
   .element-main {
-    margin: 0rem 2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
   }
 
   .product-listing {
@@ -231,7 +232,8 @@ display: grid;
 
 @media (min-width: 40rem) {
   .element-main {
-    padding: 0rem 6rem;
+    margin-left: 6rem;
+    margin-right: 6rem;
   }
 
   .checkout-cart {
